tests/baselines/reference/objectBindingPatternKeywordIdentifiers01.errors.txt
//// [tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers01.ts] ////

objectBindingPatternKeywordIdentifiers01.ts(1,13): error TS1005: ':' expected.


==== objectBindingPatternKeywordIdentifiers01.ts (1 errors) ====
    var { while } = { while: 1 }
                ~
!!! error TS1005: ':' expected.